<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>benewake_lidar_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 driver for Benewake LIDAR sensors using MSOP protocol</description>
  <maintainer email="murat@todo.todo">Murat Yilmaz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>nlohmann-json-dev</build_depend>
  <build_depend>libboost-system-dev</build_depend>

  <exec_depend>libboost-system-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
